# prometheus-eval

./: .gitignore  PROMPTS.md  README.md  USAGE.md  pyproject.toml
BiGGen-Bench/: .gitignore  README.md  data_loader.py  dummy.json  dummy_input.json  dummy_output.json  init.sh  make_report.py  pyproject.toml  requirements.txt  run_api_inference.py  run_base_inference.py  run_chat_inference.py  run_inference.py  run_response_eval.py  run_response_eval_api.py  sample_evals.json  sample_responses.json  test.py  test.sh  test_prometheus_eval.py  urial_conversation.py
BiGGen-Bench/assets/human_eval_materials/docs/: LLM_Evaluation_Recruiting_grounding.docx  LLM_Evaluation_Recruiting_instruction.docx  LLM_Evaluation_Recruiting_planning.docx  LLM_Evaluation_Recruiting_reasoning_math.docx  LLM_Evaluation_Recruiting_refinement.docx  LLM_Evaluation_Recruiting_safety.docx  LLM_Evaluation_Recruiting_theory.docx  LLM_Evaluation_Recruiting_tool.docx
BiGGen-Bench/assets/human_eval_materials/qualtrics files/: LLM_Evaluation_Recruiting_grounding.qsf  LLM_Evaluation_Recruiting_instruction.qsf  LLM_Evaluation_Recruiting_planning.qsf  LLM_Evaluation_Recruiting_reasoning_math.qsf  LLM_Evaluation_Recruiting_refinement.qsf  LLM_Evaluation_Recruiting_safety.qsf  LLM_Evaluation_Recruiting_theory.qsf  LLM_Evaluation_Recruiting_tool.qsf
BiGGen-Bench/tasks/: README.md
BiGGen-Bench/tasks/grounding/: README.md
BiGGen-Bench/tasks/instruction_following/: README.md
BiGGen-Bench/tasks/multilingual/: README.md
BiGGen-Bench/tasks/planning/: README.md
BiGGen-Bench/tasks/reasoning/: README.md
BiGGen-Bench/tasks/refinement/: README.md
BiGGen-Bench/tasks/safety/: README.md
BiGGen-Bench/tasks/safety/honesty/: README.md  (+2 more)
BiGGen-Bench/tasks/theory_of_mind/: README.md
BiGGen-Bench/tasks/tool_usage/: README.md
BiGGen-Bench/urial_prompts/: basic_icl.txt  inst_1k.txt  inst_1k_v2.txt  inst_1k_v3.help.txt  inst_1k_v3.txt  inst_1k_v4.help.txt  inst_1k_v4.txt  inst_1shot.txt  inst_2k.txt  inst_2k_v4.txt  inst_help.txt  inst_help_mini_yi.txt  inst_help_v2 copy.txt  inst_help_v2.txt  inst_help_v2_yi.txt  inst_help_v3-1k.txt  inst_help_v3.txt  inst_help_v4.txt  inst_help_v5-1k.txt  inst_help_v6-1k.txt  inst_help_v6-2k.txt  inst_mini.txt  inst_only.txt  upload_hf.py
libs/prometheus-eval/: Makefile  README.md  pyproject.toml  test.py  test_absolute.py  test_relative.py
libs/prometheus-eval/prometheus_eval/: __init__.py  judge.py  litellm.py  mock.py  parser.py  prompts.py  utils.py  vllm.py
libs/prometheus-eval/tests/: test_judge.py  test_parser.py
(+217 files in other folders)
