[tool.poetry]
name = "biggen-bench"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastchat = "^0.1.0"
datasets = "^2.19.2"


[tool.poetry.group.dev.dependencies]
fastchat = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
